gwakeonlan 0.6.4
  * New Chinese (Taiwan) translation by Cosmo Chene
  * Updated Italian and German translations
  * New feature to import machines from an ethers file (see /etc/ethers)
  * Source file now PEP-8 compliant
  
 -- Fabio Castelli <muflone@vbsimple.net>  Sat, 18 Jul 2015 19:24:03 +0200

gwakeonlan 0.6.3
  * Updated German translation by sahwar
  
 -- Fabio Castelli <muflone@vbsimple.net>  Sat, 4 Oct 2014 16:49:48 +0200

gwakeonlan 0.6.2
  * Changed project URL to http://www.muflone.com/gwakeonlan
  * New Bulgarian translation by sahwar
  
 -- Fabio Castelli <muflone@vbsimple.net>  Sat, 6 Sep 2014 19:16:13 +0200

gwakeonlan 0.6.1
  * Changed project URL to http://url.muflone.com/gwakeonlan
  * Fixed license URL in the documentation
  * Fixed the minimum GTK+ version to 3.0
  
 -- Fabio Castelli <muflone@vbsimple.net>  Sun, 8 Dic 2013 17:25:29 +0100

gwakeonlan 0.6.0

  * Rewrote the whole project from scratch!
  * Moved the project from Google Code to GitHub:
    https://github.com/muflone/gwakeonlan
  * Now there's also a website for the project:
    http://gwakeonlan.muflone.com/
  * The whole user interface now uses GTK+ 3.0 and GtkBuilder
  * The main window is now a GtkApplicationWindow
  * Added a GMenu to application
  * Moved the configuration file from ~/.gwakeonlan to the folder
    $XDG_CONFIG_HOME/gwakeonlan/ using XDG BaseDirectory specifications
  * Updated translations and new languages
  * New dialog for ARP cache searching
  
 -- Fabio Castelli <muflone@vbsimple.net>  Sun, 20 Oct 2013 01:39:29 +0200
  
gwakeonlan 0.5.1

  * Added Dutch translation by Thomas De Rocker

 -- Fabio Castelli <muflone@vbsimple.net>  Sun, 17 Oct 2010 12:24:25 +0200

  * Added Slovak translation by Jozef Riha

 -- Fabio Castelli <muflone@vbsimple.net>  Sat, 29 May 2010 20:37:14 +0100

  * Added German translation by Martin Riemenschneider
  * Fixed Spanish translation by Luca Della Ghezza
